@@ -9,8 +9,10 @@ SVN trunk (1.1+svn):
    * updated translations: German, Hebrew, Norwegian, Polish, Russian
  * units
    * gave names to mermaids
- * gameplay change :
+ * gameplay changes :
    * improved default weapon selection on player attack (patch #500)
+   * attack_weight=0 disables the attack when attacking
+   * defense_weight=0 disables the attack when defending
  * user interface
    * centered BFW title logo on main screen for 1024x768 (still off-center for
      800x600)
